--- a/src/app/layouts/default-layout/default-layout.component.html
+++ b/src/app/layouts/default-layout/default-layout.component.html
@@ -11,9 +11,9 @@
     <!-- Logo -->
     <div class="sidebar-logo">
       <a href="/" [class.collapsed]="isCollapsed()">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo" />
+        <img src="/logo.png" alt="IDAS Logo" />
         @if (!isCollapsed()) {
-          <h1>Angular IDAS</h1>
+          <h1>IDAS</h1>
         }
       </a>
     </div>
