--- a/src/app/pages/welcome/welcome.scss
+++ b/src/app/pages/welcome/welcome.scss
@@ -52,6 +52,7 @@
   font-size: 42px;
   font-weight: 700;
   margin: 0 0 $spacing-md 0;
+  color: white;
   animation: fadeIn 0.8s ease-out 0.2s both;
 }
 
